Downgrade to java 1.8